--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "**Postlash - Social Media**",
   "main": "index.js",
   "scripts": {
+    "prebuild": "npm install --prefix client && npm install --prefix server",
     "build": "concurrently \"npm run build --prefix client\" \"npm run build --prefix server\"",
     "start": "concurrently \"npm run start --prefix client\" \"npm run start --prefix server\""
   },
