--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "**Postlash - Social Media**",
   "main": "index.js",
   "scripts": {
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install && cd ..",
     "build": "concurrently \"npm run build --prefix client\" \"npm run build --prefix server\"",
     "start": "concurrently \"npm run preview --prefix client\" \"npm run start --prefix server\""
   },
