--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install-all": "npm install && cd server && npm install && cd ../client && npm install && cd ..",
+    "prebuild": "npm run install-all",
     "build": "concurrently \"npm run build --prefix client\" \"npm run build --prefix server\"",
     "start": "concurrently \"npm run preview --prefix client\" \"npm run start --prefix server\""
   },
