--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "start": "serve -s dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "react-router-dom": "^7.1.0",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
+    "serve": "^14.2.4",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
